# winix

./: CMakeLists.txt  string.h  winix.sln  winix.vcxproj  winix.vcxproj.filters
Debug/: list.nativecodeanalysis.xml  mem_alloc.nativecodeanalysis.xml  mm.nativecodeanalysis.xml  srec.nativecodeanalysis.xml  sys_stdio.nativecodeanalysis.xml  timer.nativecodeanalysis.xml  util.nativecodeanalysis.xml  vc141.idb
Debug/winix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  winix.lastbuildstate
fs/: cache.c  close.c  dev.c  dir.c  dir.h  filp.c  fs.h  fs_main.c  inode.c  makefs.c  open.c  open_close.c  path.c  read_write.c  stat.h  util.c
include/: fcntl.h  signal.h
include/fs/: cache.h  close.h  const.h  dev.h  file.h  filp.h  inode.h  makefs.h  open.h  path.h  read.h  super.h
include/kernel/: kernel.h  proc.h  table.h
include/std/: signal.h  stdio.h
include/sys/: dir.h  stat.h  syscall.h  types.h
include/winix/: __list.h  device.h  err.h  list.h  syscall_ctx.h
kernel/: exception.c  main.c  proc.c  sched.c  signal.c  system.c  table.c  wini_ipc.c
kernel/system/: do_execve.c  do_exit_wait.c  do_fork.c  do_getpgid.c  do_getpid.c  do_kill.c  do_setpgid.c
lib/: foo.c
lib/syscall/: ipc.c
tools/: gen_bin_code.c
winix/: kdebug.c  list.c  mm.c  srec.c  util.c
