cmake_minimum_required(VERSION 3.7)
project(winix)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        fs/cache.c
        fs/close.c
        fs/dev.c
        fs/filp.c
        fs/fs_main.c
        fs/inode.c
        fs/makefs.c
        fs/open.c
        fs/path.c
        fs/read_write.c
        fs/string.c
        fs/util.c
        include/kernel/clock.h
        include/kernel/exception.h
        include/kernel/idle.h
        include/kernel/kernel.h
        include/kernel/proc.h
        include/kernel/sched.h
        include/kernel/system.h
        include/kernel/table.h
        include/sys/direct.h
        include/sys/ipc.h
        include/sys/stat.h
        include/sys/syscall.h
        include/sys/times.h
        include/sys/types.h
        include/sys/ucontext.h
        include/sys/unistd.h
        include/sys/wait.h
        include/winix/bitmap.h
        include/winix/comm.h
        include/winix/compiler.h
        include/winix/exec.h
        include/winix/gfp.h
        include/winix/kdebug.h
        include/winix/kwramp.h
        include/winix/list.h
        include/winix/list_linux.h
        include/winix/mem_alloc.h
        include/winix/mm.h
        include/winix/page.h
        include/winix/rex.h
        include/winix/sigsend.h
        include/winix/slab.h
        include/winix/sort.h
        include/winix/srec.h
        include/winix/sys_stdio.h
        include/winix/syscall_ctx.h
        include/winix/timer.h
        include/winix/type.h
        include/winix/wini_ipc.h
        include/std/const.h
        include/std/const.h
		include/std/ctype.h
		include/std/curses.h
		include/std/debug.h
		include/std/errno.h
		include/std/lib.h
		include/std/stdbool.h
		include/std/stddef.h
		include/std/stdio.h
		include/std/stdlib.h
		include/std/ucontext.h
		include/std/unistd.h
		include/std/util.h
        kernel/system/do_alarm.c
        kernel/system/do_brk.c
        kernel/system/do_execve.c
        kernel/system/do_exit_wait.c
        kernel/system/do_fork.c
        kernel/system/do_getc.c
        kernel/system/do_getpgid.c
        kernel/system/do_getpid.c
        kernel/system/do_kill.c
        kernel/system/do_printf.c
        kernel/system/do_setpgid.c
        kernel/system/do_sigaction.c
        kernel/system/do_sigpending.c
        kernel/system/do_sigprocmask.c
        kernel/system/do_sigreturn.c
        kernel/system/do_sigsuspend.c
        kernel/system/do_sysconf.c
        kernel/system/do_times.c
        kernel/system/do_vfork.c
        kernel/system/do_waitpid.c
        kernel/system/do_winfo.c
        kernel/clock.c
        kernel/exception.c
        kernel/idle.c
        kernel/main.c
        kernel/proc.c
        kernel/sched.c
        kernel/signal.c
        kernel/system.c
        kernel/table.c
        kernel/wini_ipc.c
        lib/stdlib/atoi.c
        lib/util/util.c
		lib/posix/_sigset.c
		lib/syscall/ipc.c
		lib/syscall/errno.c
        winix/bitmap.c
        winix/kdebug.c
        winix/list.c
        winix/mem_alloc.c
        winix/mm.c
        winix/srec.c
        winix/sys_stdio.c
        winix/timer.c
        winix/util.c)

include_directories(include/)

add_executable(winix ${SOURCE_FILES})